fixe problem on the background lines on iPhone max

--- a/src/scss/layouts/_background.scss
+++ b/src/scss/layouts/_background.scss
@@ -10,11 +10,11 @@
     @include flexbox(row, center, center);
 
     @include iphone6-7-8_max {
-      height: 7200px;
+      height: 7500px;
     }
 
     @include tablet-up {
-      height: 9000px;
+      height: 9080px;
     }
 
     @include big-tablet {
@@ -38,11 +38,11 @@
   background: $BG_darkBlue-opa_003;
 
   @include iphone6-7-8_max {
-    height: 7200px;
+    height: 7500px;
   }
 
   @include tablet-up {
-    height: 9000px;
+    height: 9080px;
 
   }
 
@@ -65,11 +65,11 @@
   background: $BG_darkBlue-opa_008;
 
   @include iphone6-7-8_max {
-    height: 7200px;
+    height: 7500px;
   }
 
   @include tablet-up {
-    height: 9000px;
+    height: 9080px;
   }
 
   @include big-tablet {
